# vush

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  language_reference.md  pre-commit
compiler/: vush.cpp  vush.hpp
compiler/vush_arena/: arena.cpp  arena.hpp
compiler/vush_ast/: ast.cpp  ast.hpp  ast_fwd.hpp  fwd.hpp  type_layout.cpp  type_layout.hpp  types.cpp  types.hpp  visitor.cpp  visitor.hpp
compiler/vush_ast_lowering/: ast_lowering.cpp  ast_lowering.hpp  lower_ast.cpp  lower_ast.hpp
compiler/vush_ast_opt/: fold_swizzles.cpp  opts.hpp
compiler/vush_ast_passes/: diagnostics.cpp  diagnostics.hpp  namebind.cpp  overload_group.cpp  passes.hpp  type_layout.cpp  validation.cpp
compiler/vush_ast_transform/: overload_construction.cpp  transforms.hpp
compiler/vush_ast_validation/: diagnostics.cpp  diagnostics.hpp  validation.cpp  validation.hpp
compiler/vush_autogen/: builtin_extensions.cpp  builtin_functions.cpp  builtin_symbols.cpp  builtin_symbols.hpp  builtin_types.cpp  syntax_accessors.cpp  syntax_accessors.hpp
compiler/vush_core/: context.cpp  context.hpp  either.hpp  memory.hpp  running_hash.hpp  scoped_map.hpp  source_info.hpp  source_registry.cpp  source_registry.hpp  types.hpp  utility.hpp
compiler/vush_diagnostics/: diagnostics.cpp  diagnostics.hpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp  utility.cpp  utility.hpp
compiler/vush_expansion/: expansion.cpp  expansion.hpp
compiler/vush_ir/: decoration.cpp  decoration.hpp  ext.hpp  fwd.hpp  ir.cpp  ir.hpp  ir_fwd.hpp  opcodes.hpp  prettyprint.cpp  prettyprint.hpp  types.cpp  types.hpp
compiler/vush_lexer/: diagnostics.cpp  diagnostics.hpp  lexer.cpp  lexer.hpp
compiler/vush_namebind/: namebind.cpp  namebind.hpp
compiler/vush_parser/: parser.cpp  parser.hpp
compiler/vush_sema/: diagnostics.cpp  diagnostics.hpp  sema.cpp  sema.hpp  typeconv.cpp  typeconv.hpp
compiler/vush_spirv/: layout.cpp  layout.hpp  lower_ir.cpp  lower_ir.hpp  prettyprint.cpp  prettyprint.hpp  spirv.cpp  spirv.hpp  spirv_fwd.hpp
compiler/vush_syntax/: prettyprint.cpp  syntax.cpp  syntax.hpp
compiler/vush_syntax_lowering/: lower_syntax.cpp  lower_syntax.hpp  syntax_lowering.cpp  syntax_lowering.hpp
compiler/vush_typecheck/: diagnostics.cpp  diagnostics.hpp  typecheck.cpp  typecheck.hpp  typeconv.cpp  typeconv.hpp
private/: allocator.cpp  ast.cpp  ast.hpp  ast2.hpp  ast_fwd.hpp  ast_traversal.cpp  ast_traversal.hpp  builtin_symbols.cpp  builtin_symbols.hpp  builtin_symbols_autogen.cpp  builtin_symbols_autogen.hpp  builtins.cpp  builtins.hpp  codegen.cpp  codegen.hpp  codegen_glsl.cpp  codegen_spirv.cpp  const_expr_eval.cpp  const_expr_eval.hpp  context.cpp  context.hpp  diagnostics.cpp  diagnostics.hpp  either.hpp  filesystem.cpp  filesystem.hpp  hierarchy_printer.cpp  hierarchy_printer.hpp  implicit_source.cpp  implicit_source.hpp  import_resolver.hpp  lexer.cpp  lexer.hpp  main.cpp  memory.hpp  owning_ptr.hpp  parser.cpp  parser.hpp  parser2.cpp  passes.hpp  (+16 more)
private/diagnostics/: lexer.cpp  lexer.hpp  utility.cpp  utility.hpp
private/passes/: ast_construction.cpp  ast_defcheck.cpp  ast_typecheck.cpp  ast_validation.cpp
public/vush/: allocator.hpp  expected.hpp  types.hpp  vush.hpp
tools/generator/: builtin_functions.py  builtin_functions_definitions.py  builtin_operator.py  builtin_symbols.py  builtin_type.py  generate_builtin_symbols.py  generate_syntax_accessors.py  node_definitions.py  syntax.py  transform.py
vushc/: main.cpp
